# vcpkg

./: .cproject  .gitattributes  .gitignore  .gitlab-ci.yml  .vcpkg-tool  CHANGELOG.md  CIStep.ps1  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_pt.md  CONTRIBUTING_zh.md  CONTROL  CodeQL.yml  CompareAllResultXml.ps1  CompareResultXml.ps1  CopySummaryToVcpkg000.ps1  CreateBuildArchiveFromTFS.ps1  CreateBuildArchiveFromVCFS.ps1  CreateTripletsForVS-Stable.ps1  CreateTripletsForVS-Unstable.ps1  CreateTripletsForVS.ps1  CreateWinCBuildArchive.ps1  DeployBuildArchive.ps1  DirectXTexEXR.cpp  EnableRemoteDesktop.ps1  Fedora instaling vcpkg  Fedora instaling vcpkg.md  Fedora_vcpkg_instalation_pt_BR.md  FetchWinCBuild.ps1  GetLatestBuildArchive.ps1  InitializeWorkerMachine.ps1  InstalledDirDelete.ps1  InstalledDirSymlink.ps1  Jenkinsfile  LICENSE  LICENSE.txt  NOTICE.txt  NOTICE_pt.txt  Pipfile  PostCIStep.ps1  (+79 more)
docs/examples/vcpkg_android_example_cmake_script/: CMakeLists.txt  compile.sh
helloworld/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  helloworld.cpp  vcpkg-configuration.json  vcpkg.json
scripts/test_ports/vcpkg-ci-lapack/: CMakeLists.txt  portfile.cmake  vcpkg.json
scripts/test_ports/vcpkg-cpp-module-consumer/: CMakeLists.txt  portfile.cmake  vcpkg.json
scripts/test_ports/vcpkg-cpp-module-producer/: CMakeLists.txt  portfile.cmake  vcpkg.json
toolsrc/: .clang-format  CMakeLists.txt  VERSION.txt  dirs.proj  vcpkg.natvis  vcpkg.props  vcpkg.sln
toolsrc/build.rel/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja  vcpkg
toolsrc/cmake/: utilities.cmake
toolsrc/include/: BinaryParagraph.h  BuildInfo.h  BuildPolicies.h  CStringView.h  FeatureParagraph.h  ImmutableSortedVector.h  LineInfo.h  MachineType.h  OptBool.h  PackageSpec.h  PackageSpecParseResult.h  ParagraphParseResult.h  Paragraphs.h  PostBuildLint.h  PostBuildLint_BuildInfo.h  PostBuildLint_BuildPolicies.h  PostBuildLint_BuildType.h  PostBuildLint_ConfigurationType.h  PostBuildLint_LinkageType.h  PostBuildLint_OutdatedDynamicCrt.h  SortedVector.h  SourceParagraph.h  Span.h  StatusParagraph.h  StatusParagraphs.h  Stopwatch.h  VcpkgCmdArguments.h  VcpkgPaths.h  Version.cpp  Version.h  VersionT.cpp  VersionT.h  coff_file_reader.h  cstring_view.h  expected.h  filesystem_fs.h  lazy.h  metrics.h  opt_bool.h  package_spec.h  (+36 more)
toolsrc/include/catch2/: catch.hpp
toolsrc/include/vcpkg/: archives.h  binarycaching.h  binarycaching.private.h  binaryparagraph.h  build.h  buildenvironment.h  cmakevars.h  commands.add-version.h  commands.autocomplete.h  commands.buildexternal.h  commands.cache.h  commands.ci.h  commands.ciclean.h  commands.civerifyversions.h  commands.contact.h  commands.create.h  commands.dependinfo.h  commands.edit.h  commands.env.h  commands.fetch.h  commands.format-manifest.h  commands.h  commands.hash.h  commands.info.h  commands.integrate.h  commands.interface.h  commands.list.h  commands.mirror.h  commands.owns.h  commands.porthistory.h  commands.portsdiff.h  commands.search.h  commands.setinstalled.h  commands.upgrade.h  commands.upload-metrics.h  commands.usage.h  commands.version.h  commands.xvsinstances.h  configuration.h  configurationdeserializer.h  (+45 more)
toolsrc/include/vcpkg-test/: mockcmakevarprovider.h  util.h
toolsrc/include/vcpkg-tests/: util.h
toolsrc/src/: BinaryParagraph.cpp  BuildInfo.cpp  BuildPolicies.cpp  LineInfo.cpp  MachineType.cpp  OptBool.cpp  PackageSpec.cpp  PackageSpecParseResult.cpp  ParagraphParseResult.cpp  Paragraphs.cpp  PostBuildLint.cpp  PostBuildLint_BuildInfo.cpp  PostBuildLint_BuildPolicies.cpp  PostBuildLint_BuildType.cpp  PostBuildLint_ConfigurationType.cpp  PostBuildLint_LinkageType.cpp  PostBuildLint_OutdatedDynamicCrt.cpp  PostBuiltLint_BuildType.cpp  SourceParagraph.cpp  StatusParagraph.cpp  StatusParagraphs.cpp  Stopwatch.cpp  VcpkgCmdArguments.cpp  VcpkgPaths.cpp  VersionT.cpp  coff_file_reader.cpp  commands.upgrade.cpp  commands_autocomplete.cpp  commands_available_commands.cpp  commands_build.cpp  commands_build_external.cpp  commands_cache.cpp  commands_ci.cpp  commands_contact.cpp  commands_create.cpp  commands_depends.cpp  commands_edit.cpp  commands_env.cpp  commands_export.cpp  commands_export_ifw.cpp  (+68 more)
toolsrc/src/vcpkg/: archives.cpp  binarycaching.cpp  binaryparagraph.cpp  build.cpp  buildenvironment.cpp  cmakevars.cpp  commands.add-version.cpp  commands.autocomplete.cpp  commands.buildexternal.cpp  commands.cache.cpp  commands.ci.cpp  commands.ciclean.cpp  commands.civerifyversions.cpp  commands.contact.cpp  commands.cpp  commands.create.cpp  commands.dependinfo.cpp  commands.edit.cpp  commands.env.cpp  commands.exportifw.cpp  commands.fetch.cpp  (+62 more)
toolsrc/src/vcpkg-fuzz/: main.cpp
toolsrc/src/vcpkg-test/: arguments.cpp  binarycaching.cpp  binaryconfigparser.cpp  catch.cpp  chrono.cpp  commands.build.cpp  commands.cpp  commands.create.cpp  dependencies.cpp  digest.cpp  downloads.cpp  files.cpp  format-manifest.cpp  hash.cpp  json.cpp  large-json-document.json.inc  manifests.cpp  mockcmakevarsprovider.cpp  optional.cpp  paragraph.cpp  plan.cpp  platform-expression.cpp  registries.cpp  specifier.cpp  statusparagraphs.cpp  strings.cpp  stringview.cpp  supports.cpp  system.cpp  uint128.cpp  update.cpp  util.cpp  versionplan.cpp
toolsrc/src/vcpkg-tests/: arguments.cpp  catch.cpp  chrono.cpp  dependencies.cpp  files.cpp  paragraph.cpp  plan.cpp  specifier.cpp  statusparagraphs.cpp  strings.cpp  supports.cpp  update.cpp  util.cpp
toolsrc/vcpkg/: commands_hash.cpp  vcpkg.vcxproj  vcpkg.vcxproj.filters
toolsrc/vcpkgcommon/: vcpkgcommon.vcxproj  vcpkgcommon.vcxproj.filters
toolsrc/vcpkglib/: FeatureParagraph.cpp  RCa08444  resource.h  vcpkglib.vcxproj  vcpkglib.vcxproj.filters
toolsrc/vcpkgmetrics/: vcpkgmetrics.vcxproj  vcpkgmetrics.vcxproj.filters
toolsrc/vcpkgmetricsuploader/: vcpkgmetricsuploader.vcxproj  vcpkgmetricsuploader.vcxproj.filters
toolsrc/vcpkgtest/: vcpkgtest.vcxproj  vcpkgtest.vcxproj.filters
toolsrc/windows-bootstrap/: dirs.proj  vcpkg.props  vcpkg.sln  vcpkg.vcxproj
(+30044 files in other folders)
